# PesudoDouban

./: .gitignore  .gitmodule  ACTOR_DATA.cpp  ACTOR_DATA.h  CMakelists.txt  CRAW.cpp  CRAW.h  LICENSE  MOVIE_DATA.cpp  MOVIE_DATA.h  README.md  actor.cpp  daily_movie.cpp  movie.hpp
crawler/: actor.hpp  daily_movie.hpp  movie.cpp  movie.hpp  regex.cpp  regex.hpp  url.cpp  url.hpp
data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--4864528473479573599.wt  collection-0--6140593157678633807.wt  collection-0-2066182995509220433.wt  collection-0-4252378931424085047.wt  collection-0-6813271128666739903.wt  collection-15--4864528473479573599.wt  collection-17--4864528473479573599.wt  collection-2--6140593157678633807.wt  collection-4--6140593157678633807.wt  collection-4-235470042873361100.wt  collection-5-6813271128666739903.wt  collection-6--6140593157678633807.wt  collection-6-235470042873361100.wt  collection-8--6140593157678633807.wt  index-1--4864528473479573599.wt  index-1--6140593157678633807.wt  index-1-2066182995509220433.wt  index-1-4252378931424085047.wt  index-1-6813271128666739903.wt  index-16--4864528473479573599.wt  index-18--4864528473479573599.wt  index-3--6140593157678633807.wt  index-5--6140593157678633807.wt  index-5-235470042873361100.wt  sizeStorer.wt  (+4 more)
hahaha/: CMakeLists.txt  database.cpp  database.h  main.cpp  url.cpp
hahaha/__MACOSX/: ._CRAW.hpp
script/: generate.py  get_image.py  get_movie.py  hot_top10  slice.py  top100_chinese  top100_japan  top100_south_korea  top100_us
src/: main.cpp
web/: app.js  package.json
(+34 files in other folders)
